# xen-api

./: .gitignore  .travis.yml  Makefile  configure.ml  dune-project  message-switch.opam  message-switch.opam.template  quality-gate.sh  rrdd-plugins.opam  sexpr.opam  sexpr.opam.template  xapi-idl.opam.template  xapi.opam  xapi.opam.template
.github/workflows/: 1.249-lcm.yml  docs.yml  hugo.yml  main.yml  other.yml  release.yml  shellcheck.yaml
ocaml/cdrommon/: cdrommon.ml
ocaml/database/: backend_xml.ml  block_device_io.ml  database_server_main.ml  database_test.ml  db_action_helper.ml  db_backend.ml  db_cache.ml  db_cache_impl.ml  db_cache_test.ml  db_cache_types.ml  db_cache_types.mli  db_conn_store.ml  db_connections.ml  db_filter.ml  db_globs.ml  db_lock.ml  db_ref.ml  db_remote_cache_access_v1.ml  db_remote_cache_access_v2.ml  db_rpc_client_v1.ml  db_rpc_client_v2.ml  db_rpc_common_v1.ml  db_secret_string.ml  db_upgrade.ml  db_xml.ml  dune  master_connection.ml  parse_db_conf.ml  redo_log.ml  redo_log.mli  ref_index.ml  ref_index.mli  schema.ml  static_vdis_list.ml  stats.ml  string_marshall_helper.ml  string_unmarshall_helper.ml  test_schemas.ml  unit_test_marshall.ml  unit_test_sql.ml  (+1 more)
ocaml/db_process/: xapi_db_process.ml
ocaml/doc/: dune  jsapi.ml
ocaml/events/: event_listen.ml  event_listen.py
ocaml/gencert/: dune  gencert.ml  lib.ml  lib.mli  pem.ml  pem.mli  selfcert.ml  selfcert.mli  test_lib.ml  test_pem.ml
ocaml/idl/: api_lowlevel.ml  api_lowlevel.mli  datamodel.ml  datamodel_errors.ml  datamodel_host.ml  datamodel_pool.ml  datamodel_schema.ml  datamodel_types.ml  datamodel_types.mli  datamodel_utils.ml  datamodel_values.ml  datamodel_vm.ml  datamodel_vtpm.ml  dm_api.ml  dot_backend.ml  dtd_backend.ml  dune  markdown_backend.ml  schematest.ml
ocaml/libs/log/: debug.ml  debug.mli  debug_test.ml  dune  syslog_test.ml
ocaml/libs/tracing/: dune  tracing_export.ml  tracing_export.mli
ocaml/license/: daily_license_check.ml  daily_license_check_main.ml
ocaml/mpathalert/: mpathalert.ml
ocaml/perftest/: createVM.ml  createpool.ml  cumulative_time.ml  gnuplot.ml  graphutil.ml  histogram.ml  perfdebug.ml  perftest.ml  perfutil.ml  scenario.ml  statistics.ml  tests.ml  testtypes.ml
ocaml/quicktest/: qt.ml  qt.mli  qt_filter.ml  qt_filter.mli  quicktest.ml  quicktest_args.ml  quicktest_async_calls.ml  quicktest_cbt.ml  quicktest_date.ml  quicktest_event.ml  quicktest_example.ml  quicktest_http.ml  quicktest_import_raw_vdi.ml  quicktest_max_vdi_size.ml  quicktest_sr.ml  quicktest_static_vdis.ml  quicktest_vdi.ml  quicktest_vdi_copy.ml  quicktest_vdi_ops_data_integrity.ml  quicktest_vm_import_export.ml  quicktest_vm_lifecycle.ml
ocaml/tapctl/: tapctl.ml  tapctl.mli
ocaml/test_common/: suite_init.ml
ocaml/tests/: binpack_test.ml  dune  has_vendor_device_test.py  suite_alcotest.ml  test_agility.ml  test_alert_certificate_check.ml  test_bios_strings.ml  test_bond.ml  test_ca91480.ml  test_certificates.ml  test_client.ml  test_cluster.ml  test_cluster_host.ml  test_clustering.ml  test_clustering_allowed_operations.ml  test_context.ml  test_cpuid_helpers.ml  test_daemon_manager.ml  test_datamodel_utils.ml  test_db_lowlevel.ml  test_dbsync_master.ml  test_event.ml  test_extauth_plugin_ADpbis.ml  test_extauth_plugin_ADwinbind.ml  test_features.ml  test_gpu_group.ml  test_guest_agent.ml  test_ha_vm_failover.ml  test_helpers.ml  test_host.ml  test_host_helpers.ml  test_http.ml  test_map_check.ml  test_network.ml  test_network_event_loop.ml  test_network_sriov.ml  test_nm.ml  test_no_migrate.ml  test_pci_helpers.ml  test_pgpu.ml  (+45 more)
ocaml/tests/alerts/: test_alert_certificate_check.ml  test_daily_license_check.ml  test_suite.ml
ocaml/tests/common/: alcotest_comparators.ml  dune  mock.ml  mock_rpc.ml  suite_init.ml  test_common.ml  test_event_common.ml  test_event_common.mli  test_vgpu_common.ml
ocaml/tests/record_util/: old_record_util.ml
ocaml/tests/tests/: looper.py  looper2.py
ocaml/tests/xapi-cli-protocol/: test_cli_protocol.ml
ocaml/util/: xapi_version.ml
ocaml/vncproxy/: vncproxy.ml
ocaml/xapi/: agility.ml  api_server.ml  at_least_once_more.ml  attach_helpers.ml  audit_log.ml  auth_signature.ml  authx.ml  balloon.ml  binpack.ml  bios_strings.ml  bios_strings.mli  cancel_tasks.ml  cert_distrib.ml  cert_distrib.mli  cert_refresh.ml  cert_refresh.mli  certificates.ml  certificates.mli  certificates_sync.ml  certificates_sync.mli  cli_frontend.ml  cli_operations.ml  cluster_stack_constraints.ml  config_file_sync.ml  console.ml  context.ml  context.mli  cpuid_helpers.ml  db.ml  (+273 more)
ocaml/xapi-aux/: helper_process.ml  kerberos_encryption_types.ml  kerberos_encryption_types.mli  networking_info.ml  networking_info.mli  pool_role.ml  pool_role.mli  table.ml  tar_helpers.ml
ocaml/xapi-cli-protocol/: cli_protocol.ml
ocaml/xapi-cli-server/: cli_cmdtable.ml  cli_frontend.ml  cli_operations.ml  cli_printer.ml  cli_progress_bar.ml  cli_util.ml  record_util.ml  records.ml  xapi_cli.ml
ocaml/xapi-client/: event_helper.ml  tasks.ml  tasks.mli
ocaml/xapi-consts/: api_errors.ml  api_messages.ml  constants.ml
ocaml/xapi-guard/lib/: dune  varstored_interface.ml
ocaml/xapi-storage-cli/: main.ml
ocaml/xapi-storage-script/: dune  lib.ml  lib.mli  main.ml  test_lib.ml
ocaml/xapi-types/: compression_algorithms.ml  event_types.ml  features.ml  ref.ml  ref.mli  secretString.ml  vpx_types.ml
ocaml/xen-api-client/async/: dune  xen_api_async_unix.ml
ocaml/xenopsd/simulator/: dune
ocaml/xenopsd/xc/fence/: dune  fence.ml
scripts/: Makefile  backup-sr-metadata.py  daily-alert-certificate-check  hatests  hfx_filename  host-display  import-boxgrinder.py  init.d-attach-static-vdis  install.sh  link-vms-by-sr.py  mail-alarm  mtcerrno-to-ocaml.py  nbd_client_manager.py  perfmon  print-custom-templates  restore-sr-metadata.py  static-vdis  test_usb_scan.py  time-vm-boots.py  usb_reset.py  usb_scan.py  xapi.service  xe-reset-networking  xe-scsi-dev-map
(+370 files in other folders)
