(library
 (name log)
 (public_name xapi-log)
 (modules :standard \ debug_test syslog_test)
 (foreign_stubs
   (language c)
   (names syslog_stubs))
 (libraries
   astring
   fmt
   mtime
   logs
   threads.posix
   xapi-backtrace
 )
 (wrapped false)
)

(tests
 (names debug_test syslog_test)
 (package xapi-log)
 (modules debug_test syslog_test)
 (libraries alcotest log)
)
