(library
 (name tracing)
 (modules tracing)
 (libraries re threads.posix uri xapi-log xapi-stdext-threads)
 (public_name xapi-tracing))

(library
 (name tracing_export)
 (modules tracing_export)
 (public_name xapi-tracing-export)
 (libraries
  cohttp
  cohttp-posix
  ptime
  ptime.clock.os
  result
  rpclib.core
  rpclib.json
  rresult
  threads.posix
  tracing
  uri
  xapi-log
  xapi-open-uri
  xapi-stdext-threads
  xapi-stdext-unix
  zstd)
 (preprocess
  (pps ppx_deriving_rpc)))

(test
 (name test_tracing)
 (modules test_tracing)
 (package xapi-tracing)
 (libraries tracing alcotest uuid))
