(library
  (name xen_api_client_async)
  (public_name xen-api-client-async)
  (libraries
    async
    async_kernel
    async_unix
    base
    cohttp
    core
    core_kernel
    core_unix.time_unix
    rpclib.core
    rpclib.json
    rpclib.xml
    uri
    xapi-client
    xapi-consts
    xen-api-client
    xmlm
  )
  (wrapped false)
)

