(executable
 (name xenops_simulator_main)
 (libraries
   dune-build-info
   xapi-idl.xen.interface
   xapi-xenopsd
 )
)

(rule
 (with-stdout-to
  xenopsd-simulator.1
  (run %{dep:xenops_simulator_main.exe} --help=groff)
 )
)

(rule
 (target xenopsd-simulator.1.gz)
 (deps (:man xenopsd-simulator.1))
 (action
  (with-stdout-to %{target} (with-stdin-from %{man} (run gzip))))
)

(install
 (section sbin)
 (files (xenops_simulator_main.exe as xenopsd-simulator))
 (package xapi-xenopsd-simulator)
)

(install
 (section man)
 (files xenopsd-simulator.1.gz)
 (package xapi-xenopsd-simulator)
)
